kubernetes/applications/radicale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radicale
  labels:
    app.kubernetes.io/name: radicale
    app.kubernetes.io/part-of: everlab
