kubernetes/applications/radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
  labels:
    app.kubernetes.io/name: radicale
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: radicale

  ports:
    - name: http
      port: 5232
      targetPort: http
      protocol: TCP
