kubernetes/applications/radicale/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radicale
  namespace: radicale
  labels:
    app.kubernetes.io/name: radicale
    app.kubernetes.io/part-of: everlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - dav.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: radicale
          port: 5232
          weight: 1
